--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,6 +1,7 @@
 <h1>Sign Up Below:</h1>
 
 <form method= "POST" action="/registrations">
+  Name: <input type="text" name="name">
   Email: <input type="email" name="email">
   Password: <input type="text" name="password">
   
