--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -5,5 +5,5 @@
   Email: <input type="email" name="email">
   Password: <input type="text" name="password">
   
-  <input type="submit" value="submit">
+  <input type="submit" name="submit" value="Sign Up">
 </form>
